maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:4: error: not found: value Nord
    Nord()
    ^Escaper:29: error: type mismatch;
 found   : Unit
 required: Int
    Angleabs=Angleabs+1
            ^Escaper:31: error: not found: value estSUrBiscuit
    if(!estSUrBiscuit()){
        ^Escaper:34: error: type mismatch;
 found   : Unit
 required: Int
      Angleabs=Angleabs-1
              ^Escaper:31: error: type mismatch;
 found   : Unit
 required: Int
    if(!estSUrBiscuit()){
    ^Escaper:40: error: return outside method definition
  return Angleabs
  ^Escaper:46: error: not found: value Angleabs
		Angleabs=Angleabs+1
                ^Escaper:48: error: return outside method definition
return Angleabs
^